fixed spacing for kingspells

--- a/src/App.css
+++ b/src/App.css
@@ -120,7 +120,7 @@ body {
 .tooltip__container {
   display: flex;
   flex-direction: column;
-  max-width: 200px;
+  max-width: 250px;
   line-height: normal;
   font-size: 18px;
 }
@@ -145,4 +145,9 @@ img {
   width: 25px !important;
   height: 25px;
   position: absolute;
+}
+
+.tooltip__header__title {
+  margin-left:'25px';
+  margin-right:'25px';
 }
